--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,12 @@
         android:theme="@style/Theme.Lesson22032023"
         tools:targetApi="31">
         <activity
-            android:name=".TopicActivity"
+            android:name=".mvp.view.TopicActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
         <activity
-            android:name=".SignUpActivity"
+            android:name=".mvp.view.SignUpActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity">
